--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DuAn1_nhom12"
         tools:targetApi="31">
         <activity
+            android:name=".ThongTinKhachHangChiTiet"
+            android:exported="false" />
+        <activity
+            android:name=".fragment.fragment_sanphamloai"
+            android:exported="false" />
+        <activity
             android:name=".GiaoDienThanhToan"
             android:exported="false" />
         <activity
